# subro_web

./: .dockerignore  .editorconfig  .env.example  .env.prod.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.json  .semgrepignore  .tool-versions  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Charter.md  LICENSE  Makefile  README.md  SETUP.md  commitlint.config.js  package-lock.json  package.json  version.env
backend/: .dockerignore  .env.example  .env.test  .env.test.example  Dockerfile  alembic.ini  celerybeat-schedule.db  check_db.py  debug_validation.py  google-api-config.json  pyproject.toml  pytest.ini  rate_limit_test.py  requirements.txt  verify_infrastructure.py  verify_websocket.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 03cc263fdbf7_rely_on_base_user_table_for_bools.py  0dd875e71ee0_add_full_logs_column_to_jobs_table.py  14ce5e28840f_add_validation_status_fields_to_app_.py  1b0caf6177e4_add_app_settings_table.py  1be63a1e948c_ghost_migration.py  1be63a1e948c_merge_webhook_heads.py  2088913c5852_add_open_signup_column.py  22f7ebddb421_add_dashboard_tiles.py  283a7cf6dda8_add_login_attempts_table_for_account_.py  2a0d9e2a0add_add_output_file_path_to_translation_log.py  3174f72f3821_.py  32decd351f99_.py  390d97d11c6f_add_user_name_fields.py  3d8d55585c60_add_google_usage_columns.py  50c5b9471d51_merge_heads.py  543c77da11a6_merge_heads_lockout_and_main.py  5c386c03a5e8_.py  5d4307a95cfb_add_opensubtitles_subscription_info.py  690ef37d906e_add_user_preferences.py  6d9a31d887d6_add_omdb_rate_limited_column.py  72c9ef3a9782_add_security_lockout_columns_to_users.py  73f12ec5f64c_add_opensubtitles_key_valid_field.py  7f55fc09b636_add_log_level_to_jobs.py  88fbd64e1c24_fix_storage_paths_created_at_default.py  8c37df51f001_create_jobs_table_and_enum.py  8ca55a47da71_add_tmdb_rate_limited_column.py  94c7d4638a88_add_translation_log_table_and_google_.py  9999abcdef01_add_app_version_column.py  9f3e2c1a4b57_add_api_keys_table.py  a1b2c3d4e5f6_add_webhook_secret_column.py  b0ab017734b4_add_mfa_fields_and_trusted_devices_table.py  b1c2d3e4f5g6_add_webhook_keys_table.py  b42ce73310e5_make_validation_status_fields_nullable.py  be9a77b67976_add_storage_paths.py  c2a1c5b1cf9b_add_password_changed_at_to_users.py  c2a670635b4d_enhanced_audit_schema_and_rls.py  c683232956e2_add_force_password_change_to_users.py  c6a393b59004_add_deeplusage_model.py  c99eeec3cda8_add_job_state_consistency_check.py  cf2d4e6f8g0h_remove_legacy_webhook_secret_column.py  (+8 more)
backend/alembic/versions copy/: 1ee98b12246a_.py  324d2b7e04ef_initial_schema_users_jobs.py
backend/app/: alembic.ini  alembic.ini.temp  debug_settings.py  exceptions.py  initial_data.py  main.py
backend/app/api/routers/: admin.py  audit.py  auth.py  dashboard.py  files.py  jobs.py  mfa.py  onboarding.py  passkey.py  settings.py  setup.py  storage_paths.py  translation_stats.py  users.py  webhook_keys.py
backend/app/api/websockets/: job_logs.py
backend/app/core/: api_key_auth.py  auth_dependencies.py  config.py  custom_jwt_strategy.py  effective_settings.py  log_utils.py  path_utils.py  rate_limit.py  request_context.py  security.py  security_logger.py  users.py
backend/app/crud/: __init__.py  base.py  crud_app_settings.py  crud_job.py  crud_storage_path.py  crud_user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/db/crud/: job.py
backend/app/db/models/: __init__.py  api_key.py  app_settings.py  audit_log.py  dashboard.py  deepl_usage.py  job.py  login_attempt.py  passkey.py  storage_path.py  translation_log.py  trusted_device.py  user.py  webhook_key.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: e59fcf6add4a_create_users_table.py
backend/app/schemas/: api_key.py  app_settings.py  auth.py  dashboard.py  job.py  storage_path.py  torrent.py  user.py
backend/app/services/: account_lockout.py  api_validation.py  audit_service.py  email_service.py  mfa_service.py  passkey_service.py
backend/app/tasks/: audit_export.py  audit_worker.py  celery_app.py  maintenance.py  subtitle_jobs.py
backend/debug_scripts/: check_users.py  debug_full_flow.py  debug_os_api.py  debug_validation.py  rate_limit_test.py  simulate_translations.py  verify_cookies.py  verify_dashboard_api.py  verify_e2e.py  verify_infrastructure.py  verify_websocket.py
backend/logs/: translation_log.json
backend/multipart/: __init__.py  multipart.py
backend/scripts/: annotate_tests.py  bump_version.py  entrypoint.sh  migrate_deepl_usage.py  populate_audit_logs.py  populate_db_from_json.py  qbittorrent-nox-webhook.sh  reencrypt_encrypted_fields.py  sub_downloader.py  sync_db_version.py  verify_force_password.py  worker_healthcheck.py
backend/secrets/: webhook_secret.txt
backend/tests/: conftest.py  test_passkey_backend.py.disabled  test_subtitle_integration.py  verify_job_removal.py
backend/tests/api/: conftest.py  test_admin.py  test_admin_mfa_reset.py  test_api_keys.py  test_audit.py  test_audit_integration.py  test_dashboard.py  test_files.py  test_jobs.py  test_onboarding.py  test_open_signup.py  test_passkey.py  test_settings.py  test_setup.py  test_storage_paths.py  test_translation_stats.py  test_user_name_fields.py  test_users.py  test_webhook.py  test_webhook_autoconfig.py  test_webhook_key_retrieval.py  test_webhook_keys.py
backend/tests/auth/: test_auth.py  test_force_password_change.py  test_token_secrets.py
backend/tests/factories/: __init__.py  user_factory.py
backend/tests/integration/: test_celery_task_flow.py  test_environment_isolation.py  test_job_log_streaming.py  test_job_log_streaming.sh
backend/tests/integration/utils/: mock_sub_downloader.py
backend/tests/scripts/: mock_downloader.py
backend/tests/stress/: locustfile.py
backend/tests/unit/: test_audit_security_unit.py  test_audit_service.py  test_bump_version.py  test_mock_script_logic.py  test_passkey_service.py  test_security_logger.py
backend/tests/unit/core/: test_content_detection.py  (+2 more)
backend/tests/utils/: test_encryption_keyring.py
(+223 files in other folders)
