# backend/pyproject.toml

# PEP 621 project metadata
[project]
name = "subtitle-downloader-backend"
version = "1.1.1"
description = "Backend API and Worker for the Subtitle Downloader Web Application"
authors = [{name = "Your Name", email = "you@example.com"}] # Replace with actual author info
requires-python = ">=3.12"
dynamic = ["dependencies"]
# readme = "README.md"

# Console scripts (formerly in tool.poetry.scripts)
[project.scripts]
init-data = "app.initial_data:main_cli_runner_function"

[tool.poetry]
# package-mode must stay in tool.poetry
package-mode = false
packages = [{include = "app"}]

[tool.poetry.dependencies]
jaraco-context = "^6.1.0"
python = "^3.12"
fastapi = "^0.128.0"
starlette = "^0.49.1"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
pydantic = {extras = ["email", "dotenv"], version = "^2.7.1"}
redis = {extras = ["hiredis"], version = "*"}
celery = {extras = ["redis"], version = "~5.5.0"}
python-json-logger = "^2.0.7"


gunicorn = "^22.0.0" # Production server (optional alternative to uvicorn workers)
sqlalchemy = "^2.0.29" # ORM
psycopg = {extras = ["binary"], version = "^3.1.18"} # Postgres driver (psycopg3 for sync)
asyncpg = "^0.30.0"
alembic = "^1.13.1" # Database migrations
fastapi-users = ">=15.0.2" # User management
fastapi-users-db-sqlalchemy = "^7.0.0"
argon2-cffi = "^23.1.0" # Password hashing (preferred)
# bcrypt = "^4.1.2" # Alternative password hashing
PyJWT = {extras = ["crypto"], version = "^2.9.0"} # For JWTs - replaced python-jose to fix CVE-2024-23342
slowapi = "^0.1.9" # Rate limiting
pyotp = "^2.9.0"  # TOTP for MFA
qrcode = {extras = ["pil"], version = "^7.4.2"}  # QR code generation for MFA setup
webauthn = "^2.2.0"  # WebAuthn/Passkey support
httpx = "^0.27.0"
# fastapi-csrf-protect = "^1.0.0" # CSRF Protection

# --- Development Dependencies ---
# asyncpg = "^0.30.0"
email-validator = "^2.2.0"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
psycopg2-binary = "^2.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
nest-asyncio = "^1.6.0"
# python-multipart = "^0.0.20"
# python-multipart = "^0.0.9" # More common stable version
# --- Subtitle Tool Dependencies ---
qbittorrent-api = "^2024.10.68"
imdbpy = "^2022.7.9"
deepl = "^1.19.1"
google-cloud-translate = "^3.17.0"
google-cloud-monitoring = "^2.21.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
rapidfuzz = "^3.6.2"
chardet = "^5.2.0"
rarfile = "^4.2"
nltk = "^3.9.1"
langdetect = "^1.0.9"
# ffsubsync, alass-cli, sup2srt are typically system tools or cli tools, check if they have pypi packages or are external binaries.
# requirements.txt listed them as pip installable, assuming they have python bindings or are python packages.
ffsubsync = "^0.4.26"
# alass-cli, sup2srt might not be standard pypi packages, checking...
# If they are not in pypi, they should be system installed or handled differently.
# Assuming they are pypi packages as per requirements.txt provided by user.

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0" # Code coverage
pytest-asyncio = "^0.23.6" # For testing async code
factory-boy = "^3.3.0" # Test data generation
pytest-mock = "^3.12.0"
# testcontainers = {extras = ["postgres", "redis"], version = "^4.4.0"} # For integration testing with real services
# pre-commit = "^3.7.0" # Managed via system/global install usually
ruff = "^0.14.13"
black = "^24.4.2" # Formatter (used via Ruff or standalone)
isort = "^5.13.2" # Import sorting (used via Ruff)
mypy = "^1.9.0" # Static type checking
commitizen = "^3.21.3" # Conventional commits helper
pytest-docker = "^3.2.1"
pytest-dotenv = "^0.5.2"
locust = "^2.29.0"
types-python-dateutil = "^2.9.0.20251115"
types-requests = "^2.32.4.20260107"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Ruff Configuration ---
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I", "UP", "ASYNC", "ARG", "PTH", "PD", "NPY", "RUF"]
# Add B008 to the ignore list
ignore = [
    "E501", # Ignore line length errors (handled by formatter)
    "B008", # Ignore FastAPI Depends in args warning
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s:%(filename)s:%(lineno)s --- %(message)s (%(pathname)s:%(lineno)d)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# log_levels = [
#     "app = DEBUG",
#     "app.tasks.subtitle_jobs = DEBUG",
# ]
python_files = "test_*.py"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.plugin",
    # Add this line to ignore the starlette warning
    "ignore:Please use `import python_multipart` instead\\.:PendingDeprecationWarning:starlette\\.formparsers",
]
python_classes = "Test*"
python_functions = "test_*"
# Environment variables for tests - loaded from .env.test
env_files = [
    ".env.test",
]


# --- MyPy Configuration ---
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Start permissive, tighten later
check_untyped_defs = true
disallow_untyped_defs = true
exclude = '(^|/)(tests|scripts|alembic)(/|$)'
# Add paths as needed
# mypy_path = "app"

# --- Commitizen ---
[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
version_files = [
    "backend/pyproject.toml:version",
    "frontend/package.json:version" # If managing frontend version here too
]
tag_format = "v$version"
bump_message = "chore(release): bump version to $new_version"
post_bump_hooks = [
    "git push origin main develop --force --follow-tags",
    "git push gitlab main develop --force --follow-tags"
]

# Scripts moved to [project.scripts] section above
